The SVG text along a path becomes misaligned in Firefox Developer Edition when the path has a non-1 scale transform, unlike in other browsers where it displays correctly.
Categories
(Core :: SVG, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox131 | + | fixed |
| firefox132 | --- | fixed |
| firefox133 | --- | fixed |
People
(Reporter: nicolas.jeanmonod, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
505 bytes,
image/svg+xml
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
diannaS
:
approval-mozilla-release+
|
Details |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:131.0) Gecko/20100101 Firefox/131.0
Steps to reproduce:
- Create an SVG with a path using the
transformattribute with a non-1 scale. - Add text along the path using
<textPath>. - View the SVG in Firefox Developer Edition and compare with Firefox or other browsers.
Environment:
- Firefox Developer Edition Version: 131.0b9
- Operating System: macOS 14.7
Additional Information:
- This issue is reproducible with other SVG examples using similar path scaling.
- Tested and confirmed to work correctly in Chrome, Safari, and Firefox.
The bug can also be seen in this example:
https://nichub.github.io/enneascope/
Actual results:
The text appears shifted or displaced relative to the path when a scale other than 1 is applied.
Expected results:
The text should align correctly along the path, regardless of the scale applied.
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
[Tracking Requested - why for this release]: Would be nice not to ship this but also we just came out of soft freeze so probably too late.
Comment 3•1 year ago
|
||
We can consider it for the Oct 15 131 dot release.
| Assignee | ||
Comment 4•1 year ago
|
||
We don't want the offsetted matrix, just the actual transform matrix
specified on the element.
| Assignee | ||
Comment 5•1 year ago
|
||
Need to write a test if nothing breaks: https://treeherder.mozilla.org/jobs?repo=try&revision=be0f5a59d5ccd020fe7bdd1beb025f70ca0c8f2b
| Assignee | ||
Comment 6•1 year ago
|
||
Added a test, the failures above were from another patch.
Comment 10•1 year ago
|
||
Comment 11•1 year ago
|
||
Comment on attachment 9428269 [details]
Bug 1921662 - Ignore transform-origin and such shenanigans in SVGGeometryElement::LocalTransform. r=longsonr
Beta/Release Uplift Approval Request
- User impact if declined: SVG text that uses textPath will be misrendered if the path is scaled.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Change is scoped to path scaling when used by textPath elements
- String changes made/needed: none
- Is Android affected?: Yes
Comment 12•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 13•1 year ago
|
||
Comment on attachment 9428269 [details]
Bug 1921662 - Ignore transform-origin and such shenanigans in SVGGeometryElement::LocalTransform. r=longsonr
Approved for 132.0b4.
Updated•1 year ago
|
Comment 14•1 year ago
|
||
| uplift | ||
Comment 15•1 year ago
|
||
Comment on attachment 9428269 [details]
Bug 1921662 - Ignore transform-origin and such shenanigans in SVGGeometryElement::LocalTransform. r=longsonr
Approved for 131.0.3 dot release
Comment 16•1 year ago
|
||
| uplift | ||
Updated•1 year ago
|
Description
•