Bug 1921662 - Ignore transform-origin and such shenanigans in SVGGeometryElement::LocalTransform. r=longsonr

We don't want the offsetted matrix, just the actual transform matrix
specified on the element.

Differential Revision: https://phabricator.services.mozilla.com/D224217